--- a/src/app/shared/components/item-list/item-list.component.html
+++ b/src/app/shared/components/item-list/item-list.component.html
@@ -1,6 +1,6 @@
 <ion-item
   (click)="OpenLink()"
-  class="ion-activatable ion-activatable-up">
+  class="ion-activatable ion-activatable-up none-item-border">
   <!--Icono del item-->
   <div class="icon-item-list">
     <fa-icon
