--- a/src/app/shared/components/item-list/item-list.component.scss
+++ b/src/app/shared/components/item-list/item-list.component.scss
@@ -1,8 +1,11 @@
-
+.margin {
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
+}
 
 .text-margin {
   margin-left: 0.25rem;
-  margin-top: 0.5rem;
+  // margin-top: 0.5rem;
 }
 .font-size-12 {
   font-size: 0.75rem;
