--- a/vlibs/virtwoo-auth/components/virtwoo-auth-form/virtwoo-auth-form.component.html
+++ b/vlibs/virtwoo-auth/components/virtwoo-auth-form/virtwoo-auth-form.component.html
@@ -44,6 +44,7 @@
     />
     <mat-icon
       matSuffix
+      class="contrast"
       (click)="changeVisibility()"
     >
       {{ !visibility ? 'visibility' : 'visibility_off' }}
