--- a/src/app/pages/private-profiles/private-profiles.page.html
+++ b/src/app/pages/private-profiles/private-profiles.page.html
@@ -14,7 +14,7 @@
     <div *ngIf="!load && !Empty" class="ion-activatable ion-activatable-up ripple-toolbar ripple-toolbar-mie" slot="end" >
       <fa-icon
         [icon]="['far', 'save']"
-        class="icono-arrow"
+        class="icono-arrow primary"
         (click)="Confirm()"
       ></fa-icon>
       <ion-ripple-effect></ion-ripple-effect>
@@ -142,10 +142,8 @@
     </div>
     <ion-list *ngFor="let section of items; let i = index;" >
       <ion-list-header *ngIf="section.length > 0">
-        <ion-label>
-          <strong>
+        <ion-label class="label-list">
             {{sections[i + 1].name | translate}}
-          </strong>
         </ion-label>
       </ion-list-header>
       <item-list
