--- a/src/app/pages/profile-settings/profile-settings.page.scss
+++ b/src/app/pages/profile-settings/profile-settings.page.scss
@@ -54,7 +54,9 @@ button {
 }
 .button-add {
   --background: var(--color-pego);
-  --background-hover: var(--color-cpego);
+  --background-hover: var(--color-pego);
+  --background-activated: var(--color-cpego);
+  --background-focused: var(--color-cpego);
 }
 .icon-add {
   color: var(--color-cpego) !important;
@@ -62,5 +64,15 @@ button {
 .button-cancel {
   --background: var(--color-danger);
   --background-hover: var(--color-danger);
+}
+.textarea-bio {
+  display: flex;
+  align-items: center;
+  margin-top: 0px;
+  & textarea {
+    padding-top: 0px !important;
+    padding-bottom: 0px !important;
+    height: 1.25rem;
+  }
 }
 
