--- a/src/app/pages/tabs/tabs.component.scss
+++ b/src/app/pages/tabs/tabs.component.scss
@@ -82,11 +82,16 @@
   & ion-avatar {
     width: 1.75rem;
     height: 1.75rem;
-    margin-bottom: 0.25rem;
+    margin-top: 0.25rem;
   }
   & div {
-    margin-top: 0.15rem;
+    margin-top: 0.2rem;
     border-bottom: 3px solid var(--ion-color-primary);
     width: 6rem;;
   }
+}
+.label-tab {
+  font-size: 0.625rem;
+  margin: 0px;
+  margin-bottom: 1px;
 }
