--- a/src/global.scss
+++ b/src/global.scss
@@ -52,6 +52,9 @@
 .icon-blue {
   color: #3880ff;
 }
+.icon-primary {
+  color: var(--ion-color-primary);
+}
 
 .icono-white {
   margin-inline-end: 0px !important;
@@ -70,6 +73,7 @@
 
 .icono-public {
   font-size: 1.5rem;
+  color: #fff;
 }
 
 .padding-left-10 {
@@ -79,8 +83,8 @@
 .chip-item {
   flex-wrap: nowrap;
   width: 100%;
-  margin-top: 0.1rem;
-  margin-bottom: 0.1rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .input-item {
@@ -347,7 +351,9 @@
 .primary {
   color: var(--ion-color-primary) !important;
 }
-
+.danger {
+  color: var(--ion-color-danger) !important;
+}
 .pego {
   color: var(--color-pego) !important;
 }
@@ -407,4 +413,15 @@
   flex-direction: column;
   width:  100%;
   height: 100%;
+}
+.action-sheet-group-cancel {
+  & button {
+    color: var(--color-cpego);
+  }
+}
+
+.action-sheet-group {
+  & button {
+    color: var(--color-cpego) !important;
+  }
 }
