--- a/vlibs/virtwoo-auth/auth.scss
+++ b/vlibs/virtwoo-auth/auth.scss
@@ -98,7 +98,7 @@ $padding: 2rem;
   position: relative;
   img {
     width: 60%;
-    height: 60%;
+    // height: 60%;
   }
 }
 .auth__logo, .auth__add-avatar {
