--- a/src/app/pages/public-profile/public-profile.page.html
+++ b/src/app/pages/public-profile/public-profile.page.html
@@ -1,4 +1,4 @@
-<ion-content >
+<ion-content [scrollEvents]="true" (ionScroll)="onScroll($event)" >
   <ion-fab vertical="top" horizontal="start" slot="fixed"  class="top">
   <ion-header class="opt-top transparent">
       <ion-toolbar class="transparent">
