--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -11,11 +11,6 @@
           class="icon-bar-ion"
           (click)="AlertRange()"
           ></ion-icon>
-          <!-- <fa-icon
-            [icon]="['fas',  'globe-americas']"
-            class="icon-bar"
-            (click)="AlertRange()"
-          ></fa-icon> -->
           <ion-ripple-effect></ion-ripple-effect>
         </div>
         <div class="ion-activatable ion-activatable-up ripple-toolbar ripple-toolbar-mie">
@@ -23,13 +18,11 @@
           src="/assets/icon/think.svg"
           class="icon-bar-ion"
           (click)="PromptStatus()"
-          [ngClass]="{'icon-green' : (user.status === 'WINK.STATUS.AVAILABLE'), 'icon-red' : (user.status === 'WINK.STATUS.BUSY'), 'icon-primary' : (user.status !== 'WINK.STATUS.AVAILABLE' && user.status !== 'WINK.STATUS.BUSY')}"></ion-icon>
-          <!-- <fa-icon
-            [icon]="['far',  'comment']"
-            class="icon-bar"
-            (click)="PromptStatus()"
-            [ngClass]="{'icon-green' : (user.status === 'WINK.STATUS.AVAILABLE'), 'icon-red' : (user.status === 'WINK.STATUS.BUSY'), 'icon-primary' : (user.status !== 'WINK.STATUS.AVAILABLE' && user.status !== 'WINK.STATUS.BUSY')}"
-          ></fa-icon> -->
+          [ngClass]="{
+            'icon-green' : (user.status === 'WINK.STATUS.AVAILABLE'),
+            'icon-red' : (user.status === 'WINK.STATUS.BUSY'),
+            'icon-primary' : (user.status !== 'WINK.STATUS.AVAILABLE' && user.status !== 'WINK.STATUS.BUSY')}">
+          </ion-icon>
           <ion-ripple-effect></ion-ripple-effect>
           <div *ngIf="tour" tourAnchor="status"></div>
         </div>
