--- a/src/app/pages/winks/winks.page.html
+++ b/src/app/pages/winks/winks.page.html
@@ -7,8 +7,7 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-content class="ion-padding">
-
+  <ion-content class="ion-padding" >
     <ion-segment (ionChange)="TabChanged($event)" [value]="tab" class="list-winks">
       <ion-segment-button value="requests" [disabled]="tour && tab === 'record'">
         <ion-label>
@@ -30,11 +29,15 @@
 
     <div *ngIf="tour" tourAnchor="intro"></div>
     <ion-list *ngIf="tab === 'requests'">
-      <item-wink
+      <item-request
         *ngFor="let wink of requests"
         [wink]="wink"
         [tour]="tour"
-      ></item-wink>
+        [currentRemoving]="removingRequest"
+        (removing)="removingRequest = $event"
+        [remove]="removeRequest"
+        (count)="CountRequest($event)"
+      ></item-request>
 
     </ion-list>
     <div *ngIf="tour" tourAnchor="wink"></div>
@@ -43,8 +46,11 @@
         *ngFor="let wink of record"
         [wink]="wink"
         [tour]="tour"
+        [currentRemoving]="removingRecord"
+        (removing)="removingRecord = $event"
+        [remove]="removeRecord"
+        (count)="CountRecord($event)"
       ></item-wink>
-
     </ion-list>
     <div *ngIf="tour" tourAnchor="delete"></div>
     <div *ngIf="record.length === 0 && tab === 'record'" class="vacio">
@@ -59,6 +65,11 @@
       </p>
       <fa-icon [icon]="['far', 'eye-slash']" class="icono"></fa-icon>
     </div>
+    <ion-fab vertical="bottom" horizontal="center" *ngIf="(tab === 'requests' && removingRequest) || (tab === 'record' && removingRecord)">
+      <ion-fab-button (click)="Remove()">
+        <ion-icon name="trash"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
   </ion-content>
 </div>
 <tour-step-template>
