--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -31,7 +31,7 @@
   </ion-header>
 
   <ion-content >
-    <ion-refresher slot="fixed" (ionRefresh)="GPS($event)">
+    <ion-refresher slot="fixed" (ionRefresh)="GPS($event)" *ngIf="!tour">
       <ion-refresher-content
         pullingIcon="arrow-dropdown"
         [pullingText]="'WINK.HOME.REFRESHER' | translate"
