aplicacion de networkService

--- a/src/app/pages/profile-settings/profile-settings.page.html
+++ b/src/app/pages/profile-settings/profile-settings.page.html
@@ -131,7 +131,7 @@
             formArrayName="0"
             class="none-shadow"
             >
-            <mat-expansion-panel-header class="padding-0 ">
+            <mat-expansion-panel-header >
               <mat-panel-title>
                 <ion-icon src="/assets/icon/public.svg" class="icon-section"></ion-icon>
                 {{'WINK.SECTIONS.PUBLIC' | translate}}
@@ -173,7 +173,7 @@
             formArrayName="1"
             class="none-shadow"
             >
-            <mat-expansion-panel-header class="padding-0 ">
+            <mat-expansion-panel-header >
               <mat-panel-title>
                 <ion-icon src="/assets/icon/private.svg" class="icon-section"></ion-icon>
                 {{'WINK.SECTIONS.GENERAL' | translate}}
@@ -211,7 +211,7 @@
             formArrayName="2"
             class="none-shadow"
           >
-            <mat-expansion-panel-header class="padding-0 ">
+            <mat-expansion-panel-header >
               <mat-panel-title>
                 <ion-icon src="/assets/icon/private.svg" class="icon-section"></ion-icon>
                 {{'WINK.SECTIONS.PERSONAL' | translate}}
@@ -249,7 +249,7 @@
             formArrayName="3"
             class="none-shadow"
           >
-            <mat-expansion-panel-header class="padding-0 ">
+            <mat-expansion-panel-header >
               <mat-panel-title>
                 <ion-icon src="/assets/icon/private.svg" class="icon-section"></ion-icon>
                 {{'WINK.SECTIONS.PROFESSIONAL' | translate}}
