--- a/src/global.scss
+++ b/src/global.scss
@@ -504,3 +504,9 @@
 .mat-chip-list-wrapper {
   height: 100% !important;
 }
+
+.check-del {
+  --border-radius: 50%;
+  width: 1.5rem !important;
+  height: 1.5rem !important;
+}
