--- a/src/app/pages/profile-settings/item-perfil/item-perfil.component.scss
+++ b/src/app/pages/profile-settings/item-perfil/item-perfil.component.scss
@@ -37,6 +37,7 @@
   --placeholder-color: var(--ion-color-light);
   --placeholder-opacity: 1;
   height: 100% !important;
+  min-width: 50%;
 }
 .list-chip-empty {
   max-height: 1.5rem;
