--- a/src/app/pages/tabs/tabs.component.scss
+++ b/src/app/pages/tabs/tabs.component.scss
@@ -99,3 +99,14 @@
 .tabs {
   height: 4.375rem;
 }
+
+.badge-tab {
+  top: 0.5rem !important;
+  width: 0.8rem !important;
+  height: 0.8rem !important;
+  border-radius: 50%;
+  min-width: 0.8rem;
+  & span {
+    color: var(--ion-color-primary);
+  }
+}
