--- a/src/global.scss
+++ b/src/global.scss
@@ -499,9 +499,9 @@
   margin: 0px !important;
 }
 .mat-chip-list{
-  & div {
-    margin: 0px !important;
-  }
+  // & div {
+  //   // margin: 0px !important;
+  // }
 }
 .check-del {
   --border-radius: 50%;
