--- a/src/app/pages/profile-settings/item-perfil/item-perfil.component.scss
+++ b/src/app/pages/profile-settings/item-perfil/item-perfil.component.scss
@@ -38,6 +38,7 @@
   --placeholder-opacity: 1;
   height: 100% !important;
   min-width: 50%;
+  margin: 0 !important;
 }
 .list-chip-empty {
   max-height: 1.5rem;
