eliminar notificaciones locale al abrir la app

--- a/src/app/pages/public-profile/menu/menu.component.html
+++ b/src/app/pages/public-profile/menu/menu.component.html
@@ -1,5 +1,5 @@
 <ion-list>
-  <ion-item *ngIf="wink && wink.approved" (click)="DelWink()">
+  <ion-item *ngIf="wink && wink.approved" (click)="DelWink()" class="none-item-border">
     Eliminar
   </ion-item>
 </ion-list>
