--- a/src/app/shared/components/menu-wink/menu-wink.component.html
+++ b/src/app/shared/components/menu-wink/menu-wink.component.html
@@ -1,5 +1,5 @@
 <ion-list>
-  <ion-item (click)="DelWink()">
+  <ion-item (click)="DelWink()" class="none-item-border">
     Eliminar
   </ion-item>
 </ion-list>
